# pineapple-midi-player

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
app/: abstractplayer.cpp  abstractplayer.h  audiosettingsdialog.cpp  audiosettingsdialog.h  audiosettingsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playlistmanager.cpp  playlistmanager.h  seekableslider.cpp  seekableslider.h  settings.cpp  settings.h
assets/: pineapple-midi-player.rc
libs/: implements.c  midi_parser.cpp  midi_parser.h  opl.h  tml.h  tsf.h
translations/: pineapple-midi-player.de.ts  pineapple-midi-player.nl.ts  pineapple-midi-player.pl.ts  pineapple-midi-player.tr.ts  pineapple-midi-player.ts  pineapple-midi-player.zh_CN.ts
